--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,8 +1,14 @@
 .Center {
-    position:absolute; width:70%; height:400px;
-    top:0; bottom:0; left:0; right:0; margin:auto;
+	position: absolute;
+	width: 70%;
+	height: 400px;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
 
 .TextCenter {
-    text-align: center;
+	text-align: center;
 }
