--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center;
-    background-size: cover;
+    background-size: fixed;
+    background-color: rgba(0, 0, 0, 0.05);
 }
