--- a/src/components/styles/Main.css
+++ b/src/components/styles/Main.css
@@ -5,3 +5,12 @@
 .hoverDay:hover {
     color: steelblue !important;
 }
+
+.hoverDay {
+  color: white !important;
+  font-size: 1.5rem;
+}
+
+.title {
+  font-size: 2rem !important;
+}
