--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html, body, #root {
 body {
     background-image: url("https://images.unsplash.com/photo-1505935428862-770b6f24f629?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2c5a2cf31c693f5c15fb08135bf1adf2&auto=format&fit=crop&w=1347&q=80");
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position: center;
     background-size: auto 100%;
     background-color: rgba(0, 0, 0, 0.05);
