--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,6 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: auto 100%;
+    background-size: cover;
     background-color: rgba(0, 0, 0, 0.05);
 }
